--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crud-vue",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": {
     "name": "Julio L. M",
     "url": "https://github.com/juliolmuller"
@@ -15,12 +15,13 @@
     "lint": "vue-cli-service lint"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@lacussoft/eslint-config-standard": "^1.0.6",
+    "@vue/cli-plugin-babel": "^4.5.3",
+    "@vue/cli-plugin-eslint": "^4.5.3",
+    "@vue/cli-service": "^4.5.3",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.6.5",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "vue": "^2.6.11",
     "vue-template-compiler": "^2.6.11"
@@ -32,7 +33,8 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@lacussoft/standard"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
