--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     },
     "rules": {}
   },
+  "babel": {
+    "presets": [
+      "@vue/cli-plugin-babel/preset"
+    ]
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
