--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
   "name": "crud-vue",
-  "version": "1.0.2",
+  "version": "1.0.3",
+  "license": "MIT",
   "author": {
     "name": "Julio L. M",
-    "url": "https://github.com/juliolmuller"
-  },
-  "repository": {
-    "url": "https://github.com/juliolmuller/crud-vuejs",
-    "type": "portfolio"
+    "url": "https://juliolmuller.github.io/"
   },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "start": "vue-cli-service serve --open",
+    "build": "vue-cli-service build --dest docs --modern",
     "lint": "vue-cli-service lint"
   },
+  "dependencies": {
+    "vue": "^2.6.12"
+  },
   "devDependencies": {
-    "@lacussoft/eslint-config-standard": "^1.0.6",
-    "@vue/cli-plugin-babel": "^4.5.3",
-    "@vue/cli-plugin-eslint": "^4.5.3",
-    "@vue/cli-service": "^4.5.3",
+    "@lacussoft/eslint-config-standard": "^1.0.9",
+    "@vue/cli-plugin-babel": "^4.5.8",
+    "@vue/cli-plugin-eslint": "^4.5.8",
+    "@vue/cli-service": "^4.5.8",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.6.5",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
-    "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
