--- a/package.json
+++ b/package.json
@@ -1,50 +1,28 @@
 {
   "name": "crud-vue",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "private": true,
   "license": "MIT",
   "author": "Julio L. Muller",
   "scripts": {
-    "start": "vue-cli-service serve --open",
-    "build": "vue-cli-service build --dest docs --modern",
-    "lint": "vue-cli-service lint"
+    "start": "vite --open",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "core-js": "^3.8.2",
-    "vue": "^3.0.5"
+    "vue": "^3.0.7"
   },
   "devDependencies": {
     "@lacussoft/eslint-config": "^1.0.1",
-    "@vue/cli-plugin-babel": "^4.5.10",
-    "@vue/cli-plugin-eslint": "^4.5.10",
-    "@vue/cli-service": "^4.5.10",
-    "@vue/compiler-sfc": "^3.0.5",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.17.0",
-    "eslint-plugin-vue": "^7.4.1"
-  },
-  "babel": {
-    "presets": [
-      "@vue/cli-plugin-babel/preset"
-    ]
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "@lacussoft"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@types/node": "^14.14.34",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "@vitejs/plugin-vue": "^1.1.5",
+    "@vue/compiler-sfc": "^3.0.7",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^7.22.0",
+    "eslint-plugin-vue": "^7.7.0",
+    "typescript": "^4.2.3",
+    "vite": "^2.0.5"
+  }
 }
