--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crud-vue",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "private": true,
   "license": "MIT",
   "author": "Julio L. Muller",
@@ -13,19 +13,15 @@
     "lint": "eslint src/ --fix"
   },
   "dependencies": {
-    "vue": "^3.0.7"
+    "vue": "^3.0.11"
   },
   "devDependencies": {
-    "@lacussoft/eslint-config": "^1.0.1",
     "@types/node": "^14.14.34",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
-    "@vitejs/plugin-vue": "^1.1.5",
-    "@vue/compiler-sfc": "^3.0.7",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^7.22.0",
-    "eslint-plugin-vue": "^7.7.0",
-    "typescript": "^4.2.3",
-    "vite": "^2.0.5"
+    "@vitejs/plugin-vue": "^1.2.2",
+    "@vue/compiler-sfc": "^3.0.11",
+    "eslint": "^7.26.0",
+    "eslint-config-lacussoft": "^2.0.1",
+    "typescript": "^4.2.4",
+    "vite": "^2.2.4"
   }
 }
